# ai-core

./: .gitignore  MCP_RESEARCH_FINDINGS.md  PROJECT_OUTLINE.md  pyproject.toml  pytest.ini  test_runner.py
config/: dev.yaml  mcp_servers.yaml  prod.yaml
docker/: .env.example  Dockerfile  docker-compose.yml
docker/monitoring/: prometheus.yml
docker/monitoring/grafana/datasources/: prometheus.yml
docker/nginx/: nginx.conf
src/: __init__.py
src/agent/: __init__.py  executor.py  manager.py  research_coordinator.py  tool_creator.py
src/automation/: __init__.py
src/interfaces/: __init__.py
src/mcp/: __init__.py  capability_analyzer.py  client.py  factory.py  integration.py  meta_server.py  registry.py  server_manager.py  template_engine.py  transport.py
src/mcp_servers/: __init__.py  automation_server.py  discord_server.py  infrastructure_server.py  slack_server.py
src/memory/: __init__.py  context.py  experience_db.py  long_term_memory.py  reflection.py  research_memory.py  vector_store.py
src/monitoring/: __init__.py
src/research/: __init__.py
src/venice/: __init__.py  client.py  models.py  tokens.py
tests/: conftest.py
tests/e2e/: test_system_integration.py
tests/integration/: test_mcp_integration.py
tests/unit/agent/: test_manager.py
tests/unit/mcp/: test_meta_server.py  test_server_manager.py
tests/unit/mcp_servers/: test_foundational_servers.py
tests/unit/memory/: test_long_term_memory.py
tests/unit/venice/: test_client.py
