[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-core"
version = "0.1.0"
description = "Venice.ai scaffolding system for PDX Hackerspace operations"
authors = ["PDX Hackerspace <info@pdxhackerspace.org>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
mcp = "^1.10.0"
aiohttp = "^3.9.0"
asyncio = "^3.4.3"
pydantic = "^2.5.0"
chromadb = "^0.4.0"
numpy = "^1.24.0"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
websockets = "^12.0"
slack-sdk = "^3.26.0"
discord-py = "^2.3.0"
prometheus-client = "^0.19.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
selenium = "^4.15.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.7.0"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
